# reinforcement-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
ch01/: UCB.ipynb  epsilon-greedy.ipynb  gradient-bandit.ipynb
ch02/: WAPR.ipynb  gradient-bandit.ipynb
ch03/: gridworld-example.ipynb  jacks-car-rental.ipynb
ch04/: gamblers-problem.ipynb  gridworld-policy-evaluation.ipynb  jacks-car-rental.ipynb
ch05/: blackjack-control.ipynb  blackjack-prediction-julia.ipynb  blackjack-prediction.ipynb  blackjack.jl  blackjack.py  infinite-variance-is.ipynb  mc_policy_control.jl  mc_policy_eval.jl  off-policy-estimation.ipynb  racetrack.ipynb
ch06/: agents.py  cliffwalk-gridworld.ipynb  double-q-example.ipynb  example-6.2.ipynb  gridworld.py  noisy-cliffwalk-gridworld.ipynb  windy-gridworld.ipynb
notebooks/ch02/: epsilon-greedy.ipynb
notebooks/ch05/: blackjack-control.ipynb  off-policy-estimation.ipynb
notebooks/ch06/: cliffwalk-gridworld.ipynb  double-q-example.ipynb  markov-random-process-example.ipynb  noisy-cliffwalk-gridworld.ipynb  windy-gridworld.ipynb
notebooks/ch07/: random-walk-tdn.ipynb  windy-gridworld.ipynb
notebooks/ch10/: lunar-lander-td0-bayes-adaptive.ipynb  lunar-lander-td0-bayes-lr.ipynb  lunar-lander-td0.ipynb  lunar_lander_test.py
notebooks/misc/: agents.py  windy-gridworld-benchmark.ipynb
tabrl/: __init__.py  agents.py  gridworld.py
